Attempts to correct scrolling issue on safari by adjusting flex values on modal content

--- a/style.css
+++ b/style.css
@@ -365,7 +365,6 @@ h3 {
     width: 90%;
     max-width: 1080px;
     overflow: auto;
-    position: relative;
 }
 
 .modal-content > div {
@@ -376,6 +375,7 @@ h3 {
     height: 100%;
     width: 100%;
     position: relative;
+    flex: 1 1;
 }
 
 .modal-content hr {
